# Customer-Clustering-and-Segmentation

./: .gitignore  README.md  environment.yml  pyproject.toml
notebooks/: 01_eda.ipynb
src/ingestion/: loader.py  validation.py
