[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-segmentation"
version = "0.1.0"
description = "End-to-end customer segmentation: RFM, clustering, and churn prediction on real e-commerce data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "César Duarte" }]

# Core dependencies (mirrors environment.yml) (conda-forge manages the actual install).
# Listed here for `pip install -e .` compatibility and project metadata.
dependencies = [
    "pandas>=2.2",
    "python-calamine>=0.6.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "openpyxl>=3.1",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "hdbscan>=0.8",
    "pymc-marketing>=0.19.4",
    "sqlalchemy>=2.0",
    "psycopg2>=2.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]