[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-segmentation"
version = "0.1.0"
description = "End-to-end customer segmentation: RFM, clustering, and churn prediction on real e-commerce data."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "César Duarte" }]

# ── Pixi workspace configuration ────────────────────────────────────────────
[tool.pixi.workspace]
channels  = ["conda-forge"]
platforms = ["win-64", "linux-64"]

# ── Conda dependencies (resolved via conda-forge) ───────────────────────────
# Packages listed here benefit from conda's binary builds (e.g. MKL-linked
# numpy/pandas, compiled C extensions for psycopg2, LightGBM, XGBoost).
[tool.pixi.dependencies]
python            = "3.12.*"
pandas            = ">=2.2"
python-calamine   = ">=0.6.1"
numpy             = ">=1.26"
pyarrow           = ">=15.0"
openpyxl          = ">=3.1"
scikit-learn      = ">=1.4"
xgboost           = ">=2.0"
lightgbm          = ">=4.3"
sqlalchemy        = ">=2.0"
psycopg2          = ">=2.9"
matplotlib        = ">=3.8"
seaborn           = ">=0.13"
plotly            = ">=5.20"
jupyter           = ">=1.0"
ipykernel         = ">=6.0"
hdbscan           = ">=0.8"
pymc-marketing    = ">=0.19.4"

# ── PyPI dependencies ────────────────────────────────────────────────────────
# The project itself is installed as an editable package, replacing
# the previous `pip install -e .` step. This registers src/ for imports.
[tool.pixi.pypi-dependencies]
customer-segmentation = { path = ".", editable = true }

# ── Feature: dev tools (linting) ────────────────────────────────────────────
[tool.pixi.feature.dev.dependencies]
ruff = ">=0.4"

# ── Environments ─────────────────────────────────────────────────────────────
[tool.pixi.environments]
default = { features = ["dev"], solve-group = "main" }

# ── Tasks (optional shortcuts) ───────────────────────────────────────────────
[tool.pixi.tasks]
lab  = "jupyter lab"
lint = "ruff check src/"
fmt  = "ruff format src/"
